--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/Treeptik/datamgmt
+package: github.com/treeptik/datamgmt
 import:
   - package: github.com/docker/docker
     version: v1.13.1
